<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.udacity.R"/>
        <variable
            name="file"
            type="com.udacity.model.Download"/>
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/detail_motionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/content_detail_xml_constraintlayout_scene"
        tools:context=".views.DetailActivity"
        tools:showIn="@layout/activity_detail">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/file_name_label"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{file.name}"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/status_label"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{file.status ? @string/download_success : @string/download_fail, default=@string/download_success}"
                    android:textColor="@{file.status ? R.color.black : R.color.red, default = @color/black}"
                    android:textSize="18sp" />
            </TableRow>

        </TableLayout>

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#004048"
            android:paddingTop="75dp"
            android:paddingBottom="75dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:contentDescription="@string/package_image_description"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/frameLayout2"
            app:layout_constraintTop_toTopOf="@+id/frameLayout2"
            app:srcCompat="@drawable/package_icon" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>